<resources>
    <string name="app_name">Mascotas</string>
    <string name="hint_nombre_completo">Nombre Completo</string>
    <string name="hint_email">Email</string>
    <string name="hint_mensaje">Mensaje</string>
    <string name="hint_enviar_comentario">Enviar Comentario</string>
    <string name="lista_top_mascotas">ListaTopMascotas</string>

    <!--Send Email Class -->
    <string name="title">Por favor espere</string>
    <string name="message">Enviando email...</string>

    <!--Perfil-->
    <string name="nombre_perfil">Thomas</string>

    <!--Configurar Cuenta-->
    <string name="texto_guardar_cuenta">Guardar Cuenta</string>
    <string name="hint_texto">Escribe su usario</string>
    <string name="spEtUsuario">etNombre</string>
    <string name="spEtIDUsuario">etIDUsuario</string>
    <string name="spEtToken">etToken</string>
    <string name="cuenta_configurada">Cuenta configurada exitosamente</string>
    <string name="nombre_cuenta_configurada">CuentaConfigurada</string>
    <string name="configuracion_notificaciones">Recepción de notificaciones habilitada </string>

    <string name="NoExisteVariable">No existe la variable</string>
    <string name="ErrorIDUsuarioInstagram">Error! Debe configurar la cuenta.</string>
</resources>